minor bug fixes for pagination
-Limited totalPages to switch between to 500 because TMDB API for some reason gives higher totalPages numbers up to 45000 in some cases even though they dont support it???
-Removed debounce from pagination since there is too much delay already in the component for some reason

--- a/src/components/MovieCard.css
+++ b/src/components/MovieCard.css
@@ -8,6 +8,7 @@
     font-size: 1.1em;
     padding-left: 0.4em;
     padding-right: 0.4em;
+    padding-bottom: 1em;
 }
 
 .MovieCard .moviecardposter {
